# agent-automata

./: README.md  pyproject.toml
agent_automata/: automaton.py  automaton_loading.py  reflectors.py  sessions.py
agent_automata/builtin_toolkit/: __init__.py  automaton_functions.py  knowledge.py  reflectors.py  validators.py
agent_automata/builtin_toolkit/planners/: __init__.py  react.py
automata/: automaton.py  automaton_loading.py  engines.py  knowledge.py  planners.py  reflectors.py  types.py  validators.py
automata/builtin_toolkit/: automaton_functions.py  engines.py  knowledge.py  reflectors.py  validators.py
automata/builtin_toolkit/planners/: __init__.py  react.py
automata/utilities/: __init__.py
automata_core/: automaton.py  validators.py
demo/: run_demo.py
demo/automata_data/save_text/: spec.yml
demo/automata_data/think/: spec.yml
demo_automata/finalize/: spec.yml
demo_automata/llm_assistant/: spec.yml
demo_automata/quiz_creator/: spec.yml
demo_automata/save_text/: spec.yml
scripts/: demo.py
