[tool.poetry]
name = "agent_automata"
version = "0.1.5"
description = ""
authors = ["solarapparition <15233508+solarapparition@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = ">=6.0"
langchain = { version = ">=0.0.203", optional = true }
openai = { version = ">=0.27.4", optional = true }

[tool.poetry.extras]
builtins = ["langchain", "openai"]

[tool.poetry.group.dev.dependencies]
pylint = ">=2.17.2"
black = ">=23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
